--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="twitter:site" content="@goruntulusohbet">
     <meta name="twitter:title" content="Türk Porno - Google Play'de Uygulamalar">
     <meta name="twitter:description" content="Yaseminden 𝐲𝐞𝐧𝐢 𝐛𝐢𝐫 𝐠𝐨𝐫𝐮𝐧𝐭𝐮𝐥𝐮 Porno 𝐬𝐨𝐡𝐛𝐞𝐭 𝐢𝐬𝐭𝐞𝐠𝐢𝐧 𝐯𝐚𝐫 𝐭𝐢𝐤𝐥𝐚 𝐯𝐞 𝐮𝐜𝐫𝐞𝐭𝐬𝐢𝐳 𝐡𝐞𝐦𝐞𝐧 𝐤𝐚𝐭𝐢𝐥 𝐭𝐢𝐤𝐥𝐚 𝐯𝐞 𝐛𝐚𝐠𝐥𝐚𝐧! 👇👇👇">
-    <meta name="twitter:image" content="https://ucretsizcanlishow.vercel.app//img/3.jpg">
+    <meta name="twitter:image" content="https://ucretsizcanlishow.vercel.app/img/3.jpg">
     <meta name="twitter:image:alt" content="Türk Porno Uygulaması">
     <meta name="twitter:url" content="https://ucretsizcanlishow.vercel.app/">
     
