--- a/index.html
+++ b/index.html
@@ -12,14 +12,21 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="description" content="Google Play Store'dan Türk Porno uygulamasını indirin. Dünya çapında insanlarla yüksek kaliteli görüntülü sohbetlerle bağlantı kurun.">
     
-    <!-- Twitter Card -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@goruntulusohbet">
-    <meta name="twitter:title" content="Türk Porno - Google Play'de Uygulamalar">
-    <meta name="twitter:description" content="Yaseminden 𝐲𝐞𝐧𝐢 𝐛𝐢𝐫 𝐠𝐨𝐫𝐮𝐧𝐭𝐮𝐥𝐮 Porno 𝐬𝐨𝐡𝐛𝐞𝐭 𝐢𝐬𝐭𝐞𝐠𝐢𝐧 𝐯𝐚𝐫 𝐭𝐢𝐤𝐥𝐚 𝐯𝐞 𝐮𝐜𝐫𝐞𝐭𝐬𝐢𝐳 𝐡𝐞𝐦𝐞𝐧 𝐤𝐚𝐭𝐢𝐥 𝐭𝐢𝐤𝐥𝐚 𝐯𝐞 𝐛𝐚𝐠𝐥𝐚𝐧! 👇👇👇">
-    <meta name="twitter:image" content="https://ucretsizcanlishow.vercel.app/img/3.jpg">
-    <meta name="twitter:image:alt" content="Türk Porno Uygulaması">
-    <meta name="twitter:url" content="https://ucretsizcanlishow.vercel.app/">
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:site" content="@goruntulusohbet">
+<meta name="twitter:title" content="Türk Porno - Google Play'de Uygulamalar">
+<meta name="twitter:description" content="Yaseminden 𝐲𝐞𝐧𝐢 𝐛𝐢𝐫 𝐠𝐨𝐫𝐮𝐧𝐭𝐮𝐥𝐮 Porno 𝐬𝐨𝐡𝐛𝐞𝐭 𝐢𝐬𝐭𝐞𝐠𝐢𝐧 𝐯𝐚𝐫 𝐭𝐢𝐤𝐥𝐚 𝐯𝐞 𝐮𝐜𝐫𝐞𝐭𝐬𝐢𝐳 𝐡𝐞𝐦𝐞𝐧 𝐤𝐚𝐭𝐢𝐥 𝐭𝐢𝐤𝐥𝐚 𝐯𝐞 𝐛𝐚𝐠𝐥𝐚𝐧! 👇👇👇">
+<meta name="twitter:image" content="https://ucretsizcanlishow.vercel.app/img/3.jpg"> <!-- DÜZELTİLDİ -->
+<meta name="twitter:image:alt" content="Türk Porno Uygulaması">
+<meta name="twitter:url" content="https://ucretsizcanlishow.vercel.app/">
+
+<!-- Open Graph / Facebook - YENİ EKLENDİ -->
+<meta property="og:title" content="Türk Porno & Görüntülü Chat - Google Play'de Uygulamalar" />
+<meta property="og:description" content="Yaseminden yeni bir görüntülü porno sohbet isteğin var! Hemen katıl ve ücretsiz canlı yayına bağlan." />
+<meta property="og:image" content="https://ucretsizcanlishow.vercel.app/img/3.jpg" />
+<meta property="og:url" content="https://ucretsizcanlishow.vercel.app/" />
+<meta property="og:type" content="website" />
     
     <!-- Manifest for PWA -->
     <link rel="manifest" href="manifest.json">
